story plugin changed and bug fixes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   slide_countdown: ^0.1.1
   logger: ^1.1.0
   shared_preferences: ^2.0.12
+  story_view: ^0.13.2
 
 dev_dependencies:
   flutter_test:
