--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   logger: ^1.1.0
   shared_preferences: ^2.0.12
   story_view: ^0.13.2
+  web_socket_channel: ^2.1.0
+  rxdart: ^0.27.3
 
 dev_dependencies:
   flutter_test:
