--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   story_view: ^0.13.2
   web_socket_channel: ^2.1.0
   rxdart: ^0.27.3
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
