--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: everyone_know_app
 description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.0.4+5
+version: 1.0.5+6
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
@@ -37,6 +37,7 @@ dependencies:
   collection: ^1.15.0
   flutter_svg: ^1.0.3
   flutter_keyboard_visibility: ^5.2.0
+  extended_image: ^4.2.1
 
 dev_dependencies:
   flutter_test:
